base template, integrate nav-toolbox TODO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 # Find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
@@ -26,84 +27,128 @@ find_package(grid_map_msgs REQUIRED)
 # Include directories
 include_directories(include)
 
-# Create a library for common code
-add_library(rs1_robot_common
-    src/common.cpp
-    src/laserprocessing.cpp
-    src/terrain_map.cpp
-    src/sensor_node.cpp
-    src/controller.cpp
+# NEW: Create separate libraries for mission planning components
+add_library(pid_controller SHARED
+  src/pid.cpp
 )
 
-# Target dependencies for the common library
-ament_target_dependencies(rs1_robot_common
-    rclcpp
-    std_srvs
-    geometry_msgs
-    nav_msgs
-    sensor_msgs
-    std_msgs
-    visualization_msgs
-    tf2
-    tf2_ros
-    tf2_geometry_msgs
-    grid_map_msgs
-    grid_map_ros
+# Add dependencies for pid_controller
+ament_target_dependencies(pid_controller
+  rclcpp
 )
 
-# Add executables for drone operation
-add_executable(drone_controller
-    src/drone_main.cpp
-    src/drone_node.cpp
+add_library(drone_control SHARED
+  src/drone_control.cpp
 )
 
-add_executable(sensor_processor_node
-    src/sensor_main.cpp
+# Add dependencies for drone_control
+ament_target_dependencies(drone_control
+  rclcpp
+  rclcpp_components
+  geometry_msgs
+  sensor_msgs
+  nav_msgs
+  std_msgs
+  std_srvs
 )
 
-# Target dependencies for drone controller
-ament_target_dependencies(drone_controller
-    rclcpp
-    std_srvs
-    geometry_msgs
-    nav_msgs
-    sensor_msgs
-    std_msgs
-    visualization_msgs
-    tf2
-    tf2_ros
-    tf2_geometry_msgs
-    grid_map_msgs
-    grid_map_ros
+# Link drone_control with pid_controller
+target_link_libraries(drone_control pid_controller)
+
+# NEW: Create mission system libraries
+add_library(state_machine SHARED
+  src/state_machine.cpp
 )
 
-# Link drone controller to common library
-target_link_libraries(drone_controller rs1_robot_common)
-
-# Target dependencies for sensor processor
-ament_target_dependencies(sensor_processor_node
-    rclcpp
-    geometry_msgs
-    nav_msgs
-    sensor_msgs
-    std_msgs
-    std_srvs
-    visualization_msgs
-    tf2
-    tf2_ros
-    tf2_geometry_msgs
-    grid_map_msgs
-    grid_map_ros
+add_library(path_planner SHARED
+  src/path_planner.cpp
 )
 
-# Link sensor processor to common library
-target_link_libraries(sensor_processor_node rs1_robot_common)
+add_library(mission_executor SHARED
+  src/mission_executor.cpp
+)
 
-# Install executables and library
+# Add dependencies for mission system libraries
+ament_target_dependencies(state_machine
+  rclcpp
+)
+
+ament_target_dependencies(path_planner
+  rclcpp
+  geometry_msgs
+)
+
+ament_target_dependencies(mission_executor
+  rclcpp
+  geometry_msgs
+)
+
+# NEW: Create mission planner component library
+add_library(mission_planner_component SHARED
+  src/mission_node.cpp
+)
+
+# Link mission planner with mission system libraries
+target_link_libraries(mission_planner_component
+  state_machine
+  path_planner
+  mission_executor
+)
+
+# NEW: Create enhanced drone controller component with mission planning
+add_library(drone_controller_enhanced_component SHARED
+  src/drone_node.cpp
+)
+
+# Link enhanced drone controller with control libraries
+target_link_libraries(drone_controller_enhanced_component drone_control pid_controller)
+
+# Dependencies for new mission planning components
+ament_target_dependencies(mission_planner_component
+  rclcpp
+  rclcpp_components
+  geometry_msgs
+  sensor_msgs
+  nav_msgs
+  std_msgs
+  std_srvs
+)
+
+ament_target_dependencies(drone_controller_enhanced_component
+  rclcpp
+  rclcpp_components
+  geometry_msgs
+  sensor_msgs
+  nav_msgs
+  std_msgs
+  std_srvs
+)
+
+# NEW: Register mission planning components
+rclcpp_components_register_nodes(mission_planner_component "drone_swarm::MissionPlannerNode")
+rclcpp_components_register_nodes(drone_controller_enhanced_component "drone_swarm::DroneControllerNode")
+
+# NEW: Create composed executables
+add_executable(drone_mission_composed src/main_composition.cpp)
+target_link_libraries(drone_mission_composed
+  mission_planner_component
+  drone_controller_enhanced_component
+)
+
+# Install executables and libraries
 install(TARGETS
-    rs1_robot_common
-    drone_controller
-    sensor_processor_node
+    pid_controller
+    drone_control
+    state_machine
+    path_planner
+    mission_executor
+    mission_planner_component
+    drone_controller_enhanced_component
+    DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS
+    drone_mission_composed
     DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -118,17 +163,14 @@ install(
   PROGRAMS
     launch/rs1_drone_spawner.py
     launch/rs1_single_drone.py
+    launch/rs1_swarm_composed.py  # NEW: Your enhanced swarm launch
   DESTINATION share/${PROJECT_NAME}/launch
 )
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  ament_lint_auto_find_test_dependencies()
-endif()
 
 # Export dependencies
 ament_export_dependencies(
     rclcpp
+    rclcpp_components
     std_srvs
     geometry_msgs
     nav_msgs
@@ -138,6 +180,23 @@ ament_export_dependencies(
     tf2
     tf2_ros
     tf2_geometry_msgs
+    grid_map_msgs
+    grid_map_ros
+)
+
+# NEW: Export mission planning components
+ament_export_targets(export_mission_components)
+install(TARGETS mission_planner_component
+        drone_controller_enhanced_component
+        pid_controller
+        drone_control
+        state_machine
+        path_planner
+        mission_executor
+        EXPORT export_mission_components
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION bin
 )
 
 ament_package()
