--- a/package.xml
+++ b/package.xml
@@ -35,6 +35,9 @@
   <depend>grid_map_msgs</depend>
   <depend>rclcpp</depend>
 
+  <!-- ROS2 Composer -->
+  <depend>rclcpp_components</depend>
+
   <depend>rs1_environment</depend>
 
   <test_depend>ament_lint_auto</test_depend>
