lots of improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,18 +102,6 @@ ament_target_dependencies(mission_executor
 # Link mission_executor with drone_control
 target_link_libraries(mission_executor drone_control)
 
-# Add Theta* path planner library
-add_library(theta_star_path_planner SHARED
-  src/theta_star_path_planner.cpp
-)
-
-ament_target_dependencies(theta_star_path_planner
-  rclcpp
-  sensor_msgs
-  nav_msgs
-  geometry_msgs
-)
-
 # Create mission planner component library
 add_library(mission_planner_component SHARED
   src/mission_node.cpp
@@ -124,7 +112,6 @@ target_link_libraries(mission_planner_component
   state_machine
   waypoint_planner
   mission_executor
-  theta_star_path_planner
 )
 
 # Create enhanced drone controller component with mission planning
@@ -179,7 +166,6 @@ install(TARGETS
     state_machine
     waypoint_planner
     mission_executor
-    theta_star_path_planner
     mission_planner_component
     drone_controller_enhanced_component
     DESTINATION lib/${PROJECT_NAME}
@@ -229,7 +215,6 @@ install(TARGETS mission_planner_component
         state_machine
         waypoint_planner
         mission_executor
-        theta_star_path_planner
         EXPORT export_mission_components
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
@@ -243,16 +228,10 @@ install(
   DESTINATION lib/${PROJECT_NAME}
 )
 
+
 # Add tests
 if(BUILD_TESTING)
-  ament_add_gtest(test_theta_star_path_planner test/test_theta_star_path_planner.cpp)
-  target_link_libraries(test_theta_star_path_planner theta_star_path_planner)
-  ament_target_dependencies(test_theta_star_path_planner
-    rclcpp
-    sensor_msgs
-    nav_msgs
-    geometry_msgs
-  )
+  # Tests can be added here
 endif()
 
 ament_package()
